--- a/.github/workflows/minify-code.yaml
+++ b/.github/workflows/minify-code.yaml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v3
 
       # Minify coede
-      - name: Minify
-        uses: anthonyftwang/minify-action@v1.0.1
+      #- name: Minify
+      #  uses: anthonyftwang/minify-action@v1.0.1
 
       # Auto-commit to branch "production"
       - uses: stefanzweifel/git-auto-commit-action@v4
